# cosc60-labs

Lab3/: CMakeLists.txt  Config.cmake.in  Makefile  README.txt  build.mk  common.mk  main.c  packets.c  packets.cmake  packets.h
Lab3/photos/: output.txt.txt
